compiler/src/parser.output
Terminals unused in grammar

    L_BRACK
    R_BRACK
    PERIOD
    PLUS_EQUAL
    MINUS_EQUAL
    ASTERISK_EQUAL
    SLASH_EQUAL
    PERCENT_EQUAL
    "&="
    PIPE_EQUAL
    DIV


Rules useless in parser due to conflicts

   41 stmts: %empty

   74 call_args: %empty


State 0 conflicts: 7 shift/reduce
State 30 conflicts: 3 shift/reduce
State 59 conflicts: 2 shift/reduce
State 71 conflicts: 1 shift/reduce
State 76 conflicts: 3 shift/reduce
State 79 conflicts: 17 reduce/reduce
State 81 conflicts: 3 shift/reduce
State 84 conflicts: 2 reduce/reduce
State 105 conflicts: 15 shift/reduce
State 106 conflicts: 15 shift/reduce
State 125 conflicts: 15 shift/reduce
State 126 conflicts: 15 shift/reduce
State 127 conflicts: 17 reduce/reduce
State 128 conflicts: 15 shift/reduce
State 134 conflicts: 16 shift/reduce
State 136 conflicts: 3 shift/reduce
State 171 conflicts: 11 shift/reduce


Grammar

    0 $accept: decls $end

    1 decls: decl
    2      | "pub" decl
    3      | decls decl
    4      | decls "pub" decl
    5      | %empty

    6 decl: var_decl
    7     | func_decl
    8     | enum_decl
    9     | struct_decl
   10     | type_decl

   11 var_decl: ident ident EQUAL expr SEMICOLON
   12         | "mut" ident ident SEMICOLON
   13         | "con" ident ident EQUAL expr SEMICOLON
   14         | "mut" ident ident EQUAL expr SEMICOLON

   15 func_decl: ident ident L_PAREN func_decl_args R_PAREN block
   16          | ident ident L_PAREN func_decl_args R_PAREN

   17 func_decl_args: %empty
   18               | var_decl
   19               | func_decl_args COMMA var_decl

   20 enum_decl: "enum" ident L_BRACE enum_fields R_BRACE

   21 enum_fields: ident
   22            | enum_fields ident
   23            | ident L_PAREN enum_partners R_PAREN
   24            | enum_fields ident enum_partners

   25 enum_partners: ident
   26              | enum_partners COMMA ident

   27 struct_decl: "struct" ident L_BRACE struct_fields R_BRACE
   28            | "struct" ident COLON struct_inherits L_BRACE struct_fields R_BRACE

   29 struct_fields: %empty
   30              | var_decl
   31              | func_decl
   32              | struct_fields var_decl
   33              | struct_fields func_decl

   34 struct_inherits: ident
   35                | struct_inherits COMMA ident

   36 type_decl: "type" type_list

   37 type_list: ident
   38          | type_list PIPE ident

   39 stmts: stmt
   40      | stmts stmt
   41      | %empty

   42 stmt: decl
   43     | "if" boolean_expr L_BRACE block R_BRACE
   44     | "loop" block
   45     | "for" ident COLON expr L_BRACE block R_BRACE
   46     | "match" ident L_BRACE match_branches R_BRACE
   47     | "return" expr SEMICOLON
   48     | "return" SEMICOLON
   49     | "defer" expr SEMICOLON
   50     | "break" SEMICOLON
   51     | "continue" SEMICOLON

   52 match_branches: %empty
   53               | match_branch
   54               | match_branches match_branch

   55 match_branch: expr COLON L_BRACE block R_BRACE
   56             | "_" COLON L_BRACE block R_BRACE

   57 block: L_BRACE stmts R_BRACE
   58      | L_BRACE R_BRACE

   59 ident: IDENTIFIER

   60 numeric: INTEGER
   61        | DOUBLE

   62 expr: ident EQUAL ident
   63     | ident L_PAREN call_args R_PAREN
   64     | ident
   65     | numeric
   66     | boolean_expr
   67     | crement expr
   68     | expr crement
   69     | uop expr
   70     | L_PAREN expr R_PAREN
   71     | expr mop expr
   72     | func_literal
   73     | struct_literal

   74 call_args: %empty
   75          | ident
   76          | call_args COMMA ident

   77 boolean_expr: boolean
   78             | boolean_expr lop boolean

   79 boolean: expr comparison expr
   80        | L_PAREN expr comparison expr R_PAREN
   81        | BANG boolean

   82 lop: AMPERSAND_AMPERSAND
   83    | PIPE_PIPE

   84 mop: PLUS
   85    | MINUS
   86    | ASTERISK
   87    | SLASH
   88    | PERCENT
   89    | AMPERSAND
   90    | PIPE

   91 crement: PLUS_PLUS
   92        | MINUS_MINUS

   93 uop: ASTERISK
   94    | AMPERSAND

   95 comparison: EQUAL_EQUAL
   96           | BANG_EQUAL
   97           | LT
   98           | LT_EQUAL
   99           | GT
  100           | GT_EQUAL

  101 func_literal: ident L_PAREN func_decl_args R_PAREN block

  102 struct_literal: "struct" L_BRACE struct_fields R_BRACE
  103               | "struct" COLON struct_inherits L_BRACE struct_fields R_BRACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <string> (258) 59
    INTEGER <string> (259) 60
    DOUBLE <string> (260) 61
    EQUAL_EQUAL <token> (261) 95
    BANG_EQUAL <token> (262) 96
    LT <token> (263) 97
    LT_EQUAL <token> (264) 98
    GT <token> (265) 99
    GT_EQUAL <token> (266) 100
    EQUAL <token> (267) 11 13 14 62
    BANG <token> (268) 81
    L_PAREN <token> (269) 15 16 23 63 70 80 101
    L_BRACK <token> (270)
    L_BRACE <token> (271) 20 27 28 43 45 46 55 56 57 58 102 103
    R_PAREN <token> (272) 15 16 23 63 70 80 101
    R_BRACK <token> (273)
    R_BRACE <token> (274) 20 27 28 43 45 46 55 56 57 58 102 103
    COMMA <token> (275) 19 26 35 76
    SEMICOLON <token> (276) 11 12 13 14 47 48 49 50 51
    PERIOD <token> (277)
    COLON <token> (278) 28 45 55 56 103
    PLUS <token> (279) 84
    PLUS_PLUS <token> (280) 91
    PLUS_EQUAL <token> (281)
    MINUS <token> (282) 85
    MINUS_MINUS <token> (283) 92
    MINUS_EQUAL <token> (284)
    ASTERISK <token> (285) 86 93
    ASTERISK_EQUAL <token> (286)
    SLASH <token> (287) 87
    SLASH_EQUAL <token> (288)
    PERCENT <token> (289) 88
    PERCENT_EQUAL <token> (290)
    AMPERSAND <token> (291) 89 94
    AMPERSAND_AMPERSAND <token> (292) 82
    "&=" <token> (293)
    PIPE <token> (294) 38 90
    PIPE_PIPE <token> (295) 83
    PIPE_EQUAL <token> (296)
    DIV (297)
    "pub" (298) 2 4
    "mut" (299) 12 14
    "con" (300) 13
    "enum" (301) 20
    "struct" (302) 27 28 102 103
    "type" (303) 36
    "if" (304) 43
    "loop" (305) 44
    "for" (306) 45
    "match" (307) 46
    "return" (308) 47 48
    "defer" (309) 49
    "break" (310) 50
    "continue" (311) 51
    "_" (312) 56


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    decls (59)
        on left: 1 2 3 4 5
        on right: 0 3 4
    decl <stmt> (60)
        on left: 6 7 8 9 10
        on right: 1 2 3 4 42
    var_decl <stmt> (61)
        on left: 11 12 13 14
        on right: 6 18 19 30 32
    func_decl <stmt> (62)
        on left: 15 16
        on right: 7 31 33
    func_decl_args <vars> (63)
        on left: 17 18 19
        on right: 15 16 19 101
    enum_decl <stmt> (64)
        on left: 20
        on right: 8
    enum_fields <enum_members> (65)
        on left: 21 22 23 24
        on right: 20 22 24
    enum_partners <enum_partners> (66)
        on left: 25 26
        on right: 23 24 26
    struct_decl <stmt> (67)
        on left: 27 28
        on right: 9
    struct_fields <fields> (68)
        on left: 29 30 31 32 33
        on right: 27 28 32 33 102 103
    struct_inherits <traits> (69)
        on left: 34 35
        on right: 28 35 103
    type_decl <stmt> (70)
        on left: 36
        on right: 10
    type_list <type_list> (71)
        on left: 37 38
        on right: 36 38
    stmts <block> (72)
        on left: 39 40 41
        on right: 40 57
    stmt <stmt> (73)
        on left: 42 43 44 45 46 47 48 49 50 51
        on right: 39 40
    match_branches <match_branches> (74)
        on left: 52 53 54
        on right: 46 54
    match_branch <match_branch> (75)
        on left: 55 56
        on right: 53 54
    block <block> (76)
        on left: 57 58
        on right: 15 43 44 45 55 56 101
    ident <ident> (77)
        on left: 59
        on right: 11 12 13 14 15 16 20 21 22 23 24 25 26 27 28 34 35 37 38 45 46 62 63 64 75 76 101
    numeric <expr> (78)
        on left: 60 61
        on right: 65
    expr <expr> (79)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 11 13 14 45 47 49 55 67 68 69 70 71 79 80
    call_args <exprs> (80)
        on left: 74 75 76
        on right: 63 76
    boolean_expr <expr> (81)
        on left: 77 78
        on right: 43 66 78
    boolean <expr> (82)
        on left: 79 80 81
        on right: 77 78 81
    lop <token> (83)
        on left: 82 83
        on right: 78
    mop <token> (84)
        on left: 84 85 86 87 88 89 90
        on right: 71
    crement <token> (85)
        on left: 91 92
        on right: 67 68
    uop <token> (86)
        on left: 93 94
        on right: 69
    comparison <token> (87)
        on left: 95 96 97 98 99 100
        on right: 79 80
    func_literal <expr> (88)
        on left: 101
        on right: 72
    struct_literal <expr> (89)
        on left: 102 103
        on right: 73


State 0

    0 $accept: . decls $end
    1 decls: . decl
    2      | . "pub" decl
    3      | . decls decl
    4      | . decls "pub" decl
    5      | %empty .  [$end, IDENTIFIER, "pub", "mut", "con", "enum", "struct", "type"]
    6 decl: . var_decl
    7     | . func_decl
    8     | . enum_decl
    9     | . struct_decl
   10     | . type_decl
   11 var_decl: . ident ident EQUAL expr SEMICOLON
   12         | . "mut" ident ident SEMICOLON
   13         | . "con" ident ident EQUAL expr SEMICOLON
   14         | . "mut" ident ident EQUAL expr SEMICOLON
   15 func_decl: . ident ident L_PAREN func_decl_args R_PAREN block
   16          | . ident ident L_PAREN func_decl_args R_PAREN
   20 enum_decl: . "enum" ident L_BRACE enum_fields R_BRACE
   27 struct_decl: . "struct" ident L_BRACE struct_fields R_BRACE
   28            | . "struct" ident COLON struct_inherits L_BRACE struct_fields R_BRACE
   36 type_decl: . "type" type_list
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    "pub"       shift, and go to state 2
    "mut"       shift, and go to state 3
    "con"       shift, and go to state 4
    "enum"      shift, and go to state 5
    "struct"    shift, and go to state 6
    "type"      shift, and go to state 7

    IDENTIFIER  [reduce using rule 5 (decls)]
    "pub"       [reduce using rule 5 (decls)]
    "mut"       [reduce using rule 5 (decls)]
    "con"       [reduce using rule 5 (decls)]
    "enum"      [reduce using rule 5 (decls)]
    "struct"    [reduce using rule 5 (decls)]
    "type"      [reduce using rule 5 (decls)]
    $default    reduce using rule 5 (decls)

    decls        go to state 8
    decl         go to state 9
    var_decl     go to state 10
    func_decl    go to state 11
    enum_decl    go to state 12
    struct_decl  go to state 13
    type_decl    go to state 14
    ident        go to state 15

    shift/reduce conflict on token "pub":
        5 decls: %empty .
        2 decls: . "pub" decl
      Example: . "pub" decl
      Shift derivation
        decls
        `-> 2: . "pub" decl
      Reduce derivation
        decls
        `-> 4: decls           "pub" decl
               `-> 5: %empty .

    shift/reduce conflict on token "mut":
        5 decls: %empty .
       12 var_decl: . "mut" ident ident SEMICOLON
      Example: . "mut" ident ident SEMICOLON
      Shift derivation
        decls
        `-> 1: decl
               `-> 6: var_decl
                      `-> 12: . "mut" ident ident SEMICOLON
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 6: var_decl
                                      `-> 12: "mut" ident ident SEMICOLON

    shift/reduce conflict on token "con":
        5 decls: %empty .
       13 var_decl: . "con" ident ident EQUAL expr SEMICOLON
      Example: . "con" ident ident EQUAL expr SEMICOLON
      Shift derivation
        decls
        `-> 1: decl
               `-> 6: var_decl
                      `-> 13: . "con" ident ident EQUAL expr SEMICOLON
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 6: var_decl
                                      `-> 13: "con" ident ident EQUAL expr SEMICOLON

    shift/reduce conflict on token "mut":
        5 decls: %empty .
       14 var_decl: . "mut" ident ident EQUAL expr SEMICOLON
      Example: . "mut" ident ident EQUAL expr SEMICOLON
      Shift derivation
        decls
        `-> 1: decl
               `-> 6: var_decl
                      `-> 14: . "mut" ident ident EQUAL expr SEMICOLON
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 6: var_decl
                                      `-> 14: "mut" ident ident EQUAL expr SEMICOLON

    shift/reduce conflict on token "enum":
        5 decls: %empty .
       20 enum_decl: . "enum" ident L_BRACE enum_fields R_BRACE
      Example: . "enum" ident L_BRACE enum_fields R_BRACE
      Shift derivation
        decls
        `-> 1: decl
               `-> 8: enum_decl
                      `-> 20: . "enum" ident L_BRACE enum_fields R_BRACE
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 8: enum_decl
                                      `-> 20: "enum" ident L_BRACE enum_fields R_BRACE

    shift/reduce conflict on token "struct":
        5 decls: %empty .
       27 struct_decl: . "struct" ident L_BRACE struct_fields R_BRACE
      Example: . "struct" ident L_BRACE R_BRACE
      Shift derivation
        decls
        `-> 1: decl
               `-> 9: struct_decl
                      `-> 27: . "struct" ident L_BRACE struct_fields  R_BRACE
                                                       `-> 27: %empty
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 9: struct_decl
                                      `-> 27: "struct" ident L_BRACE struct_fields  R_BRACE
                                                                     `-> 27: %empty

    shift/reduce conflict on token "struct":
        5 decls: %empty .
       28 struct_decl: . "struct" ident COLON struct_inherits L_BRACE struct_fields R_BRACE
      Example: . "struct" ident COLON struct_inherits L_BRACE R_BRACE
      Shift derivation
        decls
        `-> 1: decl
               `-> 9: struct_decl
                      `-> 28: . "struct" ident COLON struct_inherits L_BRACE struct_fields  R_BRACE
                                                                             `-> 28: %empty
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 9: struct_decl
                                      `-> 28: "struct" ident COLON struct_inherits L_BRACE struct_fields  R_BRACE
                                                                                           `-> 28: %empty

    shift/reduce conflict on token "type":
        5 decls: %empty .
       36 type_decl: . "type" type_list
      Example: . "type" type_list
      Shift derivation
        decls
        `-> 1: decl
               `-> 10: type_decl
                       `-> 36: . "type" type_list
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 10: type_decl
                                       `-> 36: "type" type_list

    shift/reduce conflict on token IDENTIFIER:
        5 decls: %empty .
       59 ident: . IDENTIFIER
      Example: . IDENTIFIER ident EQUAL expr SEMICOLON
      Shift derivation
        decls
        `-> 1: decl
               `-> 6: var_decl
                      `-> 11: ident                ident EQUAL expr SEMICOLON
                              `-> 59: . IDENTIFIER
      Reduce derivation
        decls
        `-> 3: decls           decl
               `-> 5: %empty . `-> 6: var_decl
                                      `-> 11: ident              ident EQUAL expr SEMICOLON
                                              `-> 59: IDENTIFIER



State 1

   59 ident: IDENTIFIER .

    $default  reduce using rule 59 (ident)


State 2

    2 decls: "pub" . decl
    6 decl: . var_decl
    7     | . func_decl
    8     | . enum_decl
    9     | . struct_decl
   10     | . type_decl
   11 var_decl: . ident ident EQUAL expr SEMICOLON
   12         | . "mut" ident ident SEMICOLON
   13         | . "con" ident ident EQUAL expr SEMICOLON
   14         | . "mut" ident ident EQUAL expr SEMICOLON
   15 func_decl: . ident ident L_PAREN func_decl_args R_PAREN block
   16          | . ident ident L_PAREN func_decl_args R_PAREN
   20 enum_decl: . "enum" ident L_BRACE enum_fields R_BRACE
   27 struct_decl: . "struct" ident L_BRACE struct_fields R_BRACE
   28            | . "struct" ident COLON struct_inherits L_BRACE struct_fields R_BRACE
   36 type_decl: . "type" type_list
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    "mut"       shift, and go to state 3
    "con"       shift, and go to state 4
    "enum"      shift, and go to state 5
    "struct"    shift, and go to state 6
    "type"      shift, and go to state 7

    decl         go to state 16
    var_decl     go to state 10
    func_decl    go to state 11
    enum_decl    go to state 12
    struct_decl  go to state 13
    type_decl    go to state 14
    ident        go to state 15


State 3

   12 var_decl: "mut" . ident ident SEMICOLON
   14         | "mut" . ident ident EQUAL expr SEMICOLON
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 17


State 4

   13 var_decl: "con" . ident ident EQUAL expr SEMICOLON
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 18


State 5

   20 enum_decl: "enum" . ident L_BRACE enum_fields R_BRACE
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 19


State 6

   27 struct_decl: "struct" . ident L_BRACE struct_fields R_BRACE
   28            | "struct" . ident COLON struct_inherits L_BRACE struct_fields R_BRACE
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 20


State 7

   36 type_decl: "type" . type_list
   37 type_list: . ident
   38          | . type_list PIPE ident
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    type_list  go to state 21
    ident      go to state 22


State 8

    0 $accept: decls . $end
    3 decls: decls . decl
    4      | decls . "pub" decl
    6 decl: . var_decl
    7     | . func_decl
    8     | . enum_decl
    9     | . struct_decl
   10     | . type_decl
   11 var_decl: . ident ident EQUAL expr SEMICOLON
   12         | . "mut" ident ident SEMICOLON
   13         | . "con" ident ident EQUAL expr SEMICOLON
   14         | . "mut" ident ident EQUAL expr SEMICOLON
   15 func_decl: . ident ident L_PAREN func_decl_args R_PAREN block
   16          | . ident ident L_PAREN func_decl_args R_PAREN
   20 enum_decl: . "enum" ident L_BRACE enum_fields R_BRACE
   27 struct_decl: . "struct" ident L_BRACE struct_fields R_BRACE
   28            | . "struct" ident COLON struct_inherits L_BRACE struct_fields R_BRACE
   36 type_decl: . "type" type_list
   59 ident: . IDENTIFIER

    $end        shift, and go to state 23
    IDENTIFIER  shift, and go to state 1
    "pub"       shift, and go to state 24
    "mut"       shift, and go to state 3
    "con"       shift, and go to state 4
    "enum"      shift, and go to state 5
    "struct"    shift, and go to state 6
    "type"      shift, and go to state 7

    decl         go to state 25
    var_decl     go to state 10
    func_decl    go to state 11
    enum_decl    go to state 12
    struct_decl  go to state 13
    type_decl    go to state 14
    ident        go to state 15


State 9

    1 decls: decl .

    $default  reduce using rule 1 (decls)


State 10

    6 decl: var_decl .

    $default  reduce using rule 6 (decl)


State 11

    7 decl: func_decl .

    $default  reduce using rule 7 (decl)


State 12

    8 decl: enum_decl .

    $default  reduce using rule 8 (decl)


State 13

    9 decl: struct_decl .

    $default  reduce using rule 9 (decl)


State 14

   10 decl: type_decl .

    $default  reduce using rule 10 (decl)


State 15

   11 var_decl: ident . ident EQUAL expr SEMICOLON
   15 func_decl: ident . ident L_PAREN func_decl_args R_PAREN block
   16          | ident . ident L_PAREN func_decl_args R_PAREN
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 26


State 16

    2 decls: "pub" decl .

    $default  reduce using rule 2 (decls)


State 17

   12 var_decl: "mut" ident . ident SEMICOLON
   14         | "mut" ident . ident EQUAL expr SEMICOLON
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 27


State 18

   13 var_decl: "con" ident . ident EQUAL expr SEMICOLON
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    ident  go to state 28


State 19

   20 enum_decl: "enum" ident . L_BRACE enum_fields R_BRACE

    L_BRACE  shift, and go to state 29


State 20

   27 struct_decl: "struct" ident . L_BRACE struct_fields R_BRACE
   28            | "struct" ident . COLON struct_inherits L_BRACE struct_fields R_BRACE

    L_BRACE  shift, and go to state 30
    COLON    shift, and go to state 31


State 21

   36 type_decl: "type" type_list .  [$end, IDENTIFIER, R_BRACE, "pub", "mut", "con", "enum", "struct", "type", "if", "loop", "for", "match", "return", "defer", "break", "continue"]
   38 type_list: type_list . PIPE ident

    PIPE  shift, and go to state 32

    $default  reduce using rule 36 (type_decl)


State 22

   37 type_list: ident .

    $default  reduce using rule 37 (type_list)


State 23

    0 $accept: decls $end .

    $default  accept


State 24

    4 decls: decls "pub" . decl
    6 decl: . var_decl
    7     | . func_decl
    8     | . enum_decl
    9     | . struct_decl
   10     | . type_decl
   11 var_decl: . ident ident EQUAL expr SEMICOLON
   12         | . "mut" ident ident SEMICOLON
   13         | . "con" ident ident EQUAL expr SEMICOLON
   14         | . "mut" ident ident EQUAL expr SEMICOLON
   15 func_decl: . ident ident L_PAREN func_decl_args R_PAREN block
   16          | . ident ident L_PAREN func_decl_args R_PAREN
   20 enum_decl: . "enum" ident L_BRACE enum_fields R_BRACE
   27 struct_decl: . "struct" ident L_BRACE struct_fields R_BRACE
   28            | . "struct" ident COLON struct_inherits L_BRACE struct_fields R_BRACE
   36 type_decl: . "type" type_list
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    "mut"       shift, and go to state 3
    "con"       shift, and go to state 4
    "enum"      shift, and go to state 5
    "struct"    shift, and go to state 6
    "type"      shift, and go to state 7

    decl         go to state 33
    var_decl     go to state 10
    func_decl    go to state 11
    enum_decl    go to state 12
    struct_decl  go to state 13
    type_decl    go to state 14
    ident        go to state 15


State 25

    3 decls: decls decl .

    $default  reduce using rule 3 (decls)


State 26

   11 var_decl: ident ident . EQUAL expr SEMICOLON
   15 func_decl: ident ident . L_PAREN func_decl_args R_PAREN block
   16          | ident ident . L_PAREN func_decl_args R_PAREN

    EQUAL    shift, and go to state 34
    L_PAREN  shift, and go to state 35


State 27

   12 var_decl: "mut" ident ident . SEMICOLON
   14         | "mut" ident ident . EQUAL expr SEMICOLON

    EQUAL      shift, and go to state 36
    SEMICOLON  shift, and go to state 37


State 28

   13 var_decl: "con" ident ident . EQUAL expr SEMICOLON

    EQUAL  shift, and go to state 38


State 29

   20 enum_decl: "enum" ident L_BRACE . enum_fields R_BRACE
   21 enum_fields: . ident
   22            | . enum_fields ident
   23            | . ident L_PAREN enum_partners R_PAREN
   24            | . enum_fields ident enum_partners
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    enum_fields  go to state 39
    ident        go to state 40


State 30

   11 var_decl: . ident ident EQUAL expr SEMICOLON
   12         | . "mut" ident ident SEMICOLON
   13         | . "con" ident ident EQUAL expr SEMICOLON
   14         | . "mut" ident ident EQUAL expr SEMICOLON
   15 func_decl: . ident ident L_PAREN func_decl_args R_PAREN block
   16          | . ident ident L_PAREN func_decl_args R_PAREN
   27 struct_decl: "struct" ident L_BRACE . struct_fields R_BRACE
   29 struct_fields: %empty .  [IDENTIFIER, R_BRACE, "mut", "con"]
   30              | . var_decl
   31              | . func_decl
   32              | . struct_fields var_decl
   33              | . struct_fields func_decl
   59 ident: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    "mut"       shift, and go to state 3
    "con"       shift, and go to state 4
